--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@hapi/boom": "9.x.x",
+    "@hapi/jwt": "^3.2.0",
     "@hapipal/haute-couture": "4.x.x",
     "@hapipal/schmervice": "^3.0.0",
     "@hapipal/schwifty": "6.x.x",
+    "@zenkolespadon/iut-encrypt": "^1.0.1",
     "exiting": "6.0.1",
     "joi": "17.x.x",
     "mysql": "^2.18.1",
